--- a/qed42/config/install/field.field.node.articles.field_guid.yml
+++ b/qed42/config/install/field.field.node.articles.field_guid.yml
@@ -3,11 +3,11 @@ status: true
 dependencies:
   config:
     - field.storage.node.field_guid
-    - node.type.article
-id: node.article.field_guid
+    - node.type.articles
+id: node.articles.field_guid
 field_name: field_guid
 entity_type: node
-bundle: article
+bundle: articles
 label: Guid
 description: ''
 required: false
