--- a/qed42/config/install/field.field.node.articles.field_source.yml
+++ b/qed42/config/install/field.field.node.articles.field_source.yml
@@ -2,14 +2,14 @@ langcode: en
 status: true
 dependencies:
   config:
-    - field.storage.node.field_category
-    - node.type.article
-    - taxonomy.vocabulary.categories
-id: node.article.field_category
-field_name: field_category
+    - field.storage.node.field_source
+    - node.type.articles
+    - taxonomy.vocabulary.sources
+id: node.articles.field_source
+field_name: field_source
 entity_type: node
-bundle: article
-label: Category
+bundle: articles
+label: Source
 description: ''
 required: false
 translatable: false
@@ -19,7 +19,7 @@ settings:
   handler: 'default:taxonomy_term'
   handler_settings:
     target_bundles:
-      categories: categories
+      sources: sources
     sort:
       field: name
       direction: asc
