--- a/qed42/config/install/migrate_plus.migration.qed42_migration_articles.yml
+++ b/qed42/config/install/migrate_plus.migration.qed42_migration_articles.yml
@@ -88,7 +88,7 @@ process:
     default_value: 1
 destination:
   plugin: 'entity:node'
-  default_bundle: article
+  default_bundle: articles
 migration_dependencies:
   required:
     - extract_article_category
