--- a/qed42/config/install/views.view.current_top_posts.yml
+++ b/qed42/config/install/views.view.current_top_posts.yml
@@ -3,7 +3,7 @@ status: true
 dependencies:
   config:
     - field.storage.node.body
-    - node.type.article
+    - node.type.articles
     - system.menu.main
     - taxonomy.vocabulary.categories
     - taxonomy.vocabulary.sources
@@ -343,14 +343,44 @@ display:
           id: type
           table: node_field_data
           field: type
+          relationship: none
+          group_type: group
+          admin_label: ''
           entity_type: node
           entity_field: type
           plugin_id: bundle
+          operator: in
           value:
-            article: article
+            articles: articles
+          group: 1
+          exposed: false
           expose:
+            operator_id: ''
+            label: ''
+            description: ''
+            use_operator: false
+            operator: ''
             operator_limit_selection: false
             operator_list: {  }
+            identifier: ''
+            required: false
+            remember: false
+            multiple: false
+            remember_roles:
+              authenticated: authenticated
+            reduce: false
+          is_grouped: false
+          group_info:
+            label: ''
+            description: ''
+            identifier: ''
+            optional: true
+            widget: select
+            multiple: false
+            remember: false
+            default_group: All
+            default_group_multiple: {  }
+            group_items: {  }
         field_category_target_id:
           id: field_category_target_id
           table: node__field_category
